# Random-somthing

./: .env  README.md  alembic.ini  database.py  docs.md  main.py  models.py  money_validation.py  pyproject.toml  router.py  start.sh
alembic/: env.py
alembic/versions/: 24f3d13aa4df_new_migration_apperantly_something_wnet_.py  3d0fedfaaca5_fixe_typo_in_db.py  a276f20ec6c8_fixe_typo_in_d.py  a7227a99a51f_initial_migration.py  c7b1c570525c_fixe_typo_in_db.py  e63eae3fb37c_init_migration.py
frontend/frontend-mybalance/: package-lock.json  package.json  startFE.sh
frontend/frontend-mybalance/src/: App.tsx
frontend/frontend-mybalance/src/components/: FetchAPI.tsx
utils/: my_validation.py
