[tool.poetry]
name = "mybalance"
version = "0.1.0"
description = ""
authors = ["Patrick van der Flier <patrick@corverdevelopment.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
basemodel = "^20190604.1625"
psycopg2-binary = "^2.9.6"
sqlalchemy = "^2.0.17"
alembic = "^1.11.1"
python-jose = "^3.3.0"
cryptography = "^41.0.1"
passlib = "^1.7.4"
coverage = "^7.2.7"
httpx = "^0.24.1"
pytest = "^7.4.0"
black = "^23.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
